grammar.ebnf
<program>       ::= <function>+ 

<function>      ::= "int" <IDENTIFIER> "(" "void" ")" "{" <statement>* "}"

<statement>     ::= "return" <expression> ";"

<expression>    ::= <factor> | <expression> <binary_op> <expression>
<factor>        ::= <INT> | <unary_op> <factor> | "(" <expression> ")"

<binary_op>     ::= "+" | "-" | "*" | "/" | "%"
<unary_op>      ::= "-" | "~"
